--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ buildscript {
 	}
 }
 
-apply plugin: 'java'
+//apply plugin: 'java'
+apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
@@ -29,4 +30,5 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
